--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,211 @@
-sdfsdfsdf
+* {
+  margin: 0;
+  padding: 0;
+  
+}
+body{
+  background-color: rgb(243, 236, 236);
+}
+nav {
+  position: fixed;
+ background-color: white;
+  width: 40%;
+  height:calc(100% - 50px);
+
+
+}
+
+
+nav ol {
+
+  /* background-color: lightgray; */
+  
+  height: 100%;
+  padding: 0px 0px;
+  list-style: none;
+  overflow-x: scroll;
+}
+
+ol li {
+padding: 18px;
+  font-size: 18px;
+  background-color: rgb(238, 227, 227);
+  
+  margin: 1px;
+}
+
+ol li a{
+  text-decoration: none;
+  color: black;
+}
+
+.notvisi {
+  display: none;
+}
+
+
+#cat{
+  display: flex;
+  margin: 5px 0px;
+  padding: 2px 0px;
+  overflow-x: auto;
+  
+}
+
+#cat a{
+  margin: 5px;
+  padding:10px;
+  background-color: white;
+  border-radius: 10px;
+  text-decoration: none;
+  color: black;
+  white-space: nowrap;
+}
+
+
+
+#menu {
+  position: sticky;
+  top: 0;
+  background-color: blue;
+  height: 50px;
+}
+
+#menu img{
+  display: inline-block;
+  padding: 0px 18px;
+  
+  
+}
+#menu p{
+  display: inline-block;
+  padding: 10px 0px;
+  font-size: 24px;
+  font-weight: bolder; 
+  
+}
+#menu p a{
+  text-decoration: none;
+  color: white;
+}
+#main{
+  padding: 10px;
+  background-color: lightgrey;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+}
+h1{
+  text-align: center;
+  margin: 8px ;
+  font-size: 22px;
+}
+#main h1, h2{
+  text-align: center;
+  font-size: 20px;
+  /* box-shadow: 2px 2px grey; */
+  padding: 4px;
+  /* border-radius: 10px; */
+}
+
+
+.child_inside {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  
+
+}
+
+.child {
+  border: 1px solid lightgrey;
+  box-shadow: 2px 2px grey;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  width: 95% ;
+  margin: 5px
+}
+
+#main .child_inside .child .details .prc {
+ margin: 5px 0px;
+ font-weight: 400;
+}
+#main .child_inside .child .details button {
+ padding: 5px 8px;
+ margin: 5px 0px;
+ background-color: rgb(133, 238, 46);
+}
+#main .child_inside .child .details button a{
+text-decoration: none;
+color: black;
+font-weight: bolder;
+}
+.imgdiv {
+  display: flex;
+  /* background-color: red; */
+  margin: 5px;
+  
+  align-items: center;
+  justify-content: center;
+  min-height: 160px;
+  max-height: 180px;
+  overflow: hidden;
+  /* width: 120px; */
+}
+
+.imgdiv img {
+ width: 100px;
+ margin: 5px;
+  text-align: center;
+}
+
+.details {
+  margin: 10px;
+  padding: 5px 0px;
+
+
+}
+
+.details .title {
+
+  font-size: 18px;
+  font-weight: bolder;
+}
+@media(max-width: 800px) {
+  nav{
+    width:80%;
+  }
+  #child_inside{
+    grid-template-columns: repeat(2 1fr);
+    width: 90%;
+    justify-content: center;
+  }
+}
+
+
+@media(max-width: 500px) {
+  #main {
+    width: 100%;
+    padding: 0px;
+  }
+nav{
+  width:80%;
+}
+  
+
+  .child {
+    width: 95%;
+
+  }
+}
+@media(max-width: 500px) {
+  .child{
+    display:block;
+    /* text-align: center; */
+  }
+}
